Complete the pasta recipes
the image of a pasta along with ingredients and cooking steps were added.

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,6 +7,26 @@
 </head>
 <body>
     <h1>Pasta</h1>
+    <img src="../img/pasta.webp" alt="Pesto pasta">
+    <h2>Pasta recipe</h2>
+    <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Pasta: Start with your favorite pasta shape. </li>
+        <li>Onion and oil: Cook the onion in olive oil until it’s translucent. </li>
+        <li>Pesto: Use store-bought or homemade pesto sauce. </li>
+        <li>Seasonings: This pesto pasta is simply seasoned with salt and pepper. </li>
+        <li>Cheese: Grate your own Parmesan cheese instead of using the pre-shredded stuff. 
+        </li>
+    </ul>
+
+    <h3>Steps</h3>   
+    <ol>
+        <li>Boil the pasta in salted water and drain. </li>
+        <li>Cook the onion in oil, then stir in the pesto and seasonings. </li>
+        <li>Add the pesto mixture to the hot pasta and toss with cheese. </li>
+    </ol>
+
     <a href="../index.html">Back to home</a>
 </body>
 </html>
