Create and complete the burger recipe page
cooking steps and required ingredients plus image were added.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
 <h1>Odin Recipes</h1>
-<a href="./recipes/pasta.html">Pasta Recipe</a>
+<ul>
+    <a href="./recipes/pasta.html"><li>Pasta Recipe</li></a>
+    <a href="./recipes/burger.html"><li>Burger Recipe</li></a>
+</ul>
 
 </body>
 
